--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -33,6 +33,8 @@
         android:textColor="@color/NeutralDarkLight"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_hello" />
@@ -47,6 +49,8 @@
         android:textColor="@color/NeutralDarkMid"
         android:textSize="38sp"
         android:textStyle="bold"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -67,10 +71,11 @@
         android:layout_marginStart="16dp"
         android:background="@drawable/dialog_bg_bordered"
         android:text="@string/sign_up"
+        android:alpha="0"
+        tools:alpha="100"
         android:textColor="@color/HighlightDark"
         app:layout_constraintBottom_toBottomOf="@+id/loginButton"
-        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
-        tools:alpha="100" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineVertical" />
 
     <Button
         android:id="@+id/loginButton"
@@ -80,13 +85,14 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/dialog_bg_filled"
         android:text="@string/login"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
-        app:layout_constraintTop_toBottomOf="@+id/tv_hello_description"
-        tools:alpha="100" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_hello_description" />
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_google"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -95,6 +101,8 @@
         android:textColor="@color/NeutralDarkLight"
         android:textSize="12sp"
         android:textStyle="bold"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintBottom_toTopOf="@+id/google"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -119,9 +127,11 @@
         android:background="@drawable/rounded_button_tertiary"
         android:padding="20dp"
         android:src="@drawable/googlelogo"
+        android:alpha="0"
+        tools:alpha="100"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_google"
+        app:layout_constraintStart_toStartOf="@+id/tv_google" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontal"
