--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layoutDescription="@xml/activity_welcome_scene"
     tools:context=".ui.welcome.WelcomeActivity">
 
     <ImageView
@@ -15,10 +16,10 @@
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.116"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/logo" />
 
     <TextView
@@ -28,32 +29,80 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
+        android:alpha="0"
         android:gravity="center"
         android:text="@string/welcome_description"
         android:textColor="@color/NeutralDarkLight"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:alpha="0"
-        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_hello" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_hello"
+        tools:alpha="100" />
+
+    <TextView
+        android:id="@+id/tvTitleMenu2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Scan Your Aksara"
+        android:textColor="@color/NeutralDarkMid"
+        android:textSize="38sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="parent"
+        tools:layout_editor_absoluteY="50dp" />
+
+    <TextView
+        android:id="@+id/tvDescMenu2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Scan your handwriting balinese script character using your camera"
+        android:textColor="@color/NeutralDarkLight"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="25dp"
+        tools:layout_editor_absoluteY="79dp" />
 
     <TextView
         android:id="@+id/tv_hello"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:alpha="0"
         android:gravity="center"
         android:text="@string/Hello"
         android:textColor="@color/NeutralDarkMid"
         android:textSize="38sp"
         android:textStyle="bold"
-        android:alpha="0"
-        tools:alpha="100"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:alpha="100" />
+
+
+    <TextView
+        android:id="@+id/tvTitleMenu3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Enjoy Your Journey"
+        android:textColor="@color/NeutralDarkMid"
+        android:textSize="38sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="parent"
+        tools:layout_editor_absoluteY="395dp" />
+
+    <TextView
+        android:id="@+id/tvDescMenu3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="our platform provides balinese script character learning items"
+        android:textColor="@color/NeutralDarkLight"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteY="41dp" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -64,18 +113,34 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_hello"
         app:srcCompat="@drawable/art3" />
 
+
+    <ImageView
+        android:id="@+id/ivMenu3"
+        android:layout_width="0dp"
+        android:layout_height="250dp"
+        app:srcCompat="@drawable/art4"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="159dp" />
+
+    <ImageView
+        android:id="@+id/ivMenu2"
+        android:layout_width="0dp"
+        android:layout_height="250dp"
+        app:srcCompat="@drawable/art1"
+        tools:layout_editor_absoluteY="190dp" />
+
     <Button
         android:id="@+id/signUpButton"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:alpha="0"
         android:background="@drawable/dialog_bg_bordered"
         android:text="@string/sign_up"
-        android:alpha="0"
-        tools:alpha="100"
         android:textColor="@color/HighlightDark"
         app:layout_constraintBottom_toBottomOf="@+id/loginButton"
-        app:layout_constraintStart_toStartOf="@+id/guidelineVertical" />
+        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
+        tools:alpha="100" />
 
     <Button
         android:id="@+id/loginButton"
@@ -83,12 +148,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:alpha="0"
         android:background="@drawable/dialog_bg_filled"
         android:text="@string/login"
-        android:alpha="0"
-        tools:alpha="100"
         app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
-        app:layout_constraintTop_toBottomOf="@+id/tv_hello_description" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_hello_description"
+        tools:alpha="100" />
 
 
     <TextView
@@ -96,13 +161,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:alpha="0"
         android:gravity="center_horizontal"
         android:text="Or continue with Google"
         android:textColor="@color/NeutralDarkLight"
         android:textSize="12sp"
         android:textStyle="bold"
-        android:alpha="0"
-        tools:alpha="100"
         app:layout_constraintBottom_toTopOf="@+id/google"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -119,19 +183,75 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
+
     <ImageButton
         android:id="@+id/google"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:alpha="0"
         android:background="@drawable/rounded_button_tertiary"
         android:padding="20dp"
         android:src="@drawable/googlelogo"
-        android:alpha="0"
-        tools:alpha="100"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tv_google"
-        app:layout_constraintStart_toStartOf="@+id/tv_google" />
+        app:layout_constraintStart_toStartOf="@+id/tv_google"
+        tools:alpha="100" />
+
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/menu1"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="32dp"
+        app:altSrc="@drawable/ic_circle_full_24"
+        app:layout_constraintEnd_toStartOf="@+id/menu2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_circle_24"
+        app:tint="@color/HighlightDark"
+        tools:layout_editor_absoluteY="29dp" />
+
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/menu2"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:altSrc="@drawable/ic_circle_full_24"
+        app:layout_constraintBottom_toBottomOf="@+id/menu1"
+        app:layout_constraintEnd_toStartOf="@+id/menu3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/menu1"
+        app:layout_constraintTop_toTopOf="@+id/menu1"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_circle_24"
+        app:tint="@color/HighlightDark" />
+
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/menu3"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:altSrc="@drawable/ic_circle_full_24"
+        app:layout_constraintBottom_toBottomOf="@+id/menu2"
+        app:layout_constraintEnd_toStartOf="@+id/menu4"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/menu2"
+        app:layout_constraintTop_toTopOf="@+id/menu2"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_circle_24"
+        app:tint="@color/HighlightDark" />
+
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/menu4"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="32dp"
+        app:altSrc="@drawable/ic_circle_full_24"
+        app:layout_constraintBottom_toBottomOf="@+id/menu3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/menu3"
+        app:layout_constraintTop_toTopOf="@+id/menu3"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_circle_24"
+        app:tint="@color/HighlightDark" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontal"
@@ -151,4 +271,4 @@
         app:layout_constraintGuide_percent="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
