--- a/app/src/main/res/layout/fragment_scan_result.xml
+++ b/app/src/main/res/layout/fragment_scan_result.xml
@@ -38,6 +38,7 @@
             android:layout_marginEnd="32dp"
             android:textSize="23sp"
             android:textStyle="bold"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivResultScan"
@@ -50,6 +51,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvResultTitle"
