--- a/app/src/main/res/layout/fragment_tab_scan.xml
+++ b/app/src/main/res/layout/fragment_tab_scan.xml
@@ -8,6 +8,7 @@
     android:id="@+id/fragmentContainer"
     tools:context=".ui.scan.scanner.TabScanFragment">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -21,6 +22,7 @@
             android:layout_marginTop="50dp"
             android:orientation="horizontal"
             android:padding="10dp">
+
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -47,7 +49,17 @@
                     android:layout_marginTop="45dp"
                     android:layout_marginEnd="25dp"
                     android:layout_marginBottom="45dp"
-                    android:src="@drawable/cam_placeholder_logo" />
+                    android:src="@drawable/cam_placeholder_logo"
+                    android:contentDescription="img_placeholder"/>
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="120dp"
+                    android:foregroundGravity="center_horizontal"
+                    tools:visibility="visible"/>
 
                 <TextView
                     android:id="@+id/tvClearImage"
