--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,19 +61,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_explore"
                 android:layout_width="match_parent"
                 android:layout_height="145dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="28dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginEnd="28dp"
-                android:src="@drawable/ic_baseline_rectangle_24"
-                android:scaleType="centerCrop"
+                android:layout_marginEnd="24dp"
                 android:contentDescription="@string/explore_your_aksara"
-                app:layout_constraintTop_toTopOf="parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/art5"
+                android:background="@drawable/rounded_corner_medium"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -94,7 +95,7 @@
                     android:layout_marginEnd="8dp"
                     android:maxLines="1"
                     android:text="@string/explore_your_aksara"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -106,7 +107,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="@string/click_here_for_more_aksara"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="12sp" />
 
             </LinearLayout>
@@ -120,7 +121,7 @@
                 android:layout_marginEnd="28dp"
                 android:text="@string/history"
                 android:textSize="18sp"
-                android:background="@drawable/rounded_button_primary"
+                android:background="@drawable/dialog_bg_filled"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_explore"
