--- a/app/src/main/res/layout/learn_item.xml
+++ b/app/src/main/res/layout/learn_item.xml
@@ -28,12 +28,12 @@
                 android:layout_height="171dp"
                 android:background="@drawable/rounded_corner_little"
                 android:maxHeight="160dp"
-                android:scaleType="centerInside"
+                android:scaleType="centerCrop"
                 android:src="@color/HighlightLight"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/aksara_wianjana"/>
+                tools:src="@drawable/cam_placeholder_logo"/>
 
             <TextView
                 android:id="@+id/tv_desc"
