--- a/app/src/main/res/layout/fragment_tab_history.xml
+++ b/app/src/main/res/layout/fragment_tab_history.xml
@@ -19,4 +19,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/history_nested_item" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:visibility="visible"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
