--- a/app/src/main/res/menu/custom_tab_scan_menu.xml
+++ b/app/src/main/res/menu/custom_tab_scan_menu.xml
@@ -4,8 +4,9 @@
 
     <item
         android:id="@+id/search"
-        android:title="search"
+        android:title="@string/search"
         android:icon="@drawable/search_icon"
-        app:showAsAction="always"/>
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
 
 </menu>
